# Maze_C_Project

./: CMakeLists.txt  Makefile  README.md  bin_chunks_handling.c  bin_chunks_handling.h  chunks_handling.c  chunks_handling.h  file_loading.c  file_loading.h  file_saving.c  file_saving.h  main.c  move_chunck.c  move_chunck.h  move_chunk.c  move_chunk.h  path_finding.c  path_finding.h
chunks/: 1.txt  2.txt  3.txt  4.txt
default_maps/: 25x50_20.txt  wyjaіnienie.txt
tmp/: final_output.txt  reversed.txt  reversed_directions.txt  steps.txt
